@@ -5,10 +5,13 @@ apport (0.45) UNRELEASED; urgency=low
     files, and an ErrorMessage: from stdin. This will be called from e.g.
     dist-upgrader.
   * setup.py, debian/apport.install: Ship package_hook.
+  * apport/ui.py: If ProblemType is 'Package', call a new function
+    self.ui_present_package_error() instead of presenting a crash. Add test
+    suite checks for the package error report workflow.
   * gtk/apport-gtk: Fix return code for restarting the application ('reopen' ->
     'restart'). Closes: LP#81422
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 25 Jan 2007 11:18:26 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 25 Jan 2007 11:44:26 +0100
 
 apport (0.44) feisty; urgency=low
 
